--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -45,14 +45,10 @@
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js').then(registration => {
-                    console.log('SW registered: ', registration);
-                });
+                navigator.serviceWorker.register('/service-worker.js');
             });
-        } else {
-            console.log("Service Working not working");
         }
-    </script>
+       </script>
 
 </body>
 
